# META-GO

./: .coderabbit.yaml  .gitignore  META_GO_GUIDE.md  MetaGo_BTech_Report.md  MetaGo_Pitch_Deck_Script.md  README.md  audit_scan.py  debug_ocr.py  demo_avatar.gltf  docker-compose.yml  openapi2.json  project_report.md  project_report_final.tex  summary.md  temp_remote_server.py
.emergent/: emergent.yml
backend/: Dockerfile.backend  __init__.py  aasist_voice_spoof.py  arcface_verifier.py  backup_manager.py  challenge_provider.py  config.py  deepfake_bench_detector.py  ecapa_speaker_verifier.py  fix_imports.py  fix_tests.py  gen_sukuna_voice.py  guardian_transcription_service.py  migrate_db.py  observability.py  reconciliation.py  relayer.py  requirements-ocr.txt  requirements.txt  risk_engine.py  server.py  silent_face_liveness.py  silero_vad.py  simulators.py  test_arcface.py  test_login.py  test_ocr.py  test_siwe_parse.py  testing_db.py  whisper_voice_verifier.py  zk_verifier.py
contracts-hardhat/: README.md  deployed-addresses.json  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
docs/: domain_events.md
frontend/: .gitignore  Dockerfile.frontend  index.html  next.config.mjs  package-lock.json  package.json  patch-face-mesh.js  patch_address.py
memory/: PRD.md
research papers/: 10_Evaluating the Scalability of Centralized vs Decentralized Identity Ledgers.html  (+33 more)
sdk/: MetaGoSDK.cs
sdk/python/: pyproject.toml
sdk/python/metago/: client.py
sdk/python/samples/: event_listener.py
sdk/python/tests/: test_python_sdk.py
(+707 files in other folders)
